tests/ui/suggestions/issue-64252-self-type.stderr
error: generic args in patterns require the turbofish syntax
  --> $DIR/issue-64252-self-type.rs:4:15
   |
LL | pub fn foo(Box<Self>) { }
   |               ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL | pub fn foo(Box::<Self>) { }
   |               ++

error: generic args in patterns require the turbofish syntax
  --> $DIR/issue-64252-self-type.rs:9:15
   |
LL |     fn bar(Box<Self>) { }
   |               ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     fn bar(Box::<Self>) { }
   |               ++

error: aborting due to 2 previous errors

